<resources>
    <string name="app_name">Food Quiz</string>
    <string name="play">Play</string>
    <string name="food_list">Food List</string>
    <string name="score_board">Score Board</string>
    <string name="round_0">1</string>
    <string name="question">Question</string>
    <string name="food_picture">Picture of food</string>
    <string name="answer">Answer</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="add_new_food">Add New Food</string>
    <string name="food_name">Food Name</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="done">Done</string>
    <string name="demo_text">demo</string>
    <string name="_5">/5</string>
</resources>